# swiftcart

./: .env  .gitignore  main.py  pyproject.toml
core/: main.py
core/db/: database.py  models.py  schemas.py
core/routes/: products.py  users.py
core/utils/: security.py
